--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "henrikbjorn/phpspec-code-coverage": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
